# dividend-stock-analysis

./: README.md  dividend_stock_analysis.ipynb  pyproject.toml  stock_analysis.py
anaylsis/: __init__.py
notebooks/: dividend_stock_analysis.ipynb
